--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
 						</div>
 						<div class="panel-body">
 							<br>
-							<form name='hi-loginForm' id='hi-loginForm' class="form-horizontal" role="form">
+							<form class="form-horizontal">
 								<div class="form-group">
 									<label for="firstname" class="col-sm-4 control-label">First Name:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-										<input class="form-control" placeholder="First Name" type='email'/>
+										<input class="form-control" id="firstname" placeholder="First Name" type='text'/>
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="lastname" class="col-sm-4 control-label">Last Name:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-										<input type='text' class="form-control" placeholder="Last Name" />
+										<input type='text' id="lastname" class="form-control" placeholder="Last Name" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="email" class="col-sm-4 control-label">Email:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-envelope fa-fw"></i></span>
-										<input type='email' placeholder="Email Id" class="form-control" />
+										<input type='email' id="email" placeholder="Email Id" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="contact" class="col-sm-4 control-label">Contact No:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
-										<input type='tel' placeholder="Contact No" class="form-control" />
+										<input type='tel' id="contact" placeholder="Contact No" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="graduation" class="col-sm-4 control-label">Year Of Graduation:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-graduation-cap fa-fw"></i></span>
-										<input type='year' placeholder="Graduation Year" class="form-control" />
+										<input type='year' ID="graduationyear" placeholder="Graduation Year" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="arrivaldate" class="col-sm-4 control-label">Date Of Arrival:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
-										<input type='date' placeholder="Password" class="form-control" />
+										<input type='date' id="doa" placeholder="Password" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
@@ -78,19 +78,19 @@
 									<label for="stay" class="col-sm-4 control-label">No Of Days Stay:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-sun-o fa-fw"></i></span>
-										<input type='number' placeholder="No Of Days" class="form-control" />
+										<input type='number' id="noofday" placeholder="No Of Days" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="accomodation" class="col-sm-4 control-label">No Of People Accompying:</label>
 									<div class="col-sm-6 input-group">
 										<span class="input-group-addon"><i class="fa fa-users fa-fw"></i></span>
-										<input type='number' placeholder="No Of People" class="form-control" />
+										<input type='number' id="noofpeople" placeholder="No Of People" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group text-center">
 									<div>
-										<button name="submit" type="submit" class="btn btn-default" value="Submit"><i class="fa fa-sign-in"></i> Submit</button>
+										<button id="submitbtn" class="btn btn-default"><i class="fa fa-sign-in"></i> Submit</button>
 									</div>
 								</div>
 							</form>
@@ -99,5 +99,26 @@
 				</div>
 			</div>
 		</div>
+	<script type="text/javascript">
+	 $(document).ready(function(){
+		$( "#submitbtn" ).click(function() {
+				var firstName = $("#firstname").val();
+				var	lastName = $("#lastname").val();
+				var	email = $("#email").val();
+				var	contact = $("#contact").val();
+				var	graduationYear = $("#graduationyear").val();
+				var	dateArrival = $("#doa").val();
+				var	accomodationReq = $("input[name='Accomodation']:checked").val();
+				var	noofDay = $("#noofday").val();
+				var	noofPeople = $("#noofpeople").val();
+				console.log("Hello");
+				alert("FirstName: "+firstName+"LAST NAME: "+lastName+"EMAIL: "+email+"CONTACT "+contact+"GRADDAY"+graduationYear+"doa"+dateArrival+"accREq"+accomodationReq+"nod"+noofDay+"nop"+noofPeople);
+					
+		})
+	});
+	</script>
 	</body>
 </html>
+
+
+
