--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 									<label for="accomodation" class="col-sm-4 control-label">Accomodation Required:</label>
 									<div class="col-sm-6 input-group">
 										<label class="radio-inline">
-										  <input type="radio" class="checkbox-inline" name="Accomodation" value="Yes" checked> Yes<br>
+										  <input type="radio" class="checkbox-inline" name="AccomodationReq" value="Yes" checked> Yes<br>
 										</label>
 										<label class="radio-inline">
-										  <input type="radio" class="checkbox-inline" name="Accomodation" value="No"> No<br>
+										  <input type="radio" class="checkbox-inline" name="AccomodationReq" value="No"> No<br>
 										</label>
 									</div>
 								</div>
@@ -105,29 +105,32 @@
 	 $(document).ready(function(){
 		$( "#submitbtn" ).click(function(e) {
 				e.preventDefault();
-				var firstName = " Alumini Name: "+ $("#firstname").val() + " ";
+				var firstName = "<b>Alumini Name: </b>"+ $("#firstname").val() + " ";
 				var	lastName = $("#lastname").val();
 				var	email = $("#email").val();
-				var	contact = " Contact Number: " + $("#contact").val() + "<br />" ;
-				var	graduationYear = " Graduation Year: " + $("#graduationyear").val() + "<br />" ;
-				var	dateArrival = " Arrival Date:" + $("#doa").val() + "<br />";
-				var	accomodationReq = " Accomodation Required: " + $("input[name='accomodation']:checked").val() +"<br />";
-				var	noofDay = " No Of Days Stay: " + $("#noofday").val() + "<br />";
-				var	noofPeople = " No Of People: " + $("#noofpeople").val() + "<br />";
+				var	contact = " <b>Contact Number: </b>" + $("#contact").val() + "<br />" ;
+				var	graduationYear = " <b>Graduation Year: </b>" + $("#graduationyear").val() + "<br />" ;
+				var	dateArrival = " <b> Arrival Date: </b>" + $("#doa").val() + "<br />";
+				var	accomodationReq = " <b>Accomodation Required: </b>" + $("input[name='AccomodationReq']:checked").val() +"<br />";
+				var	noofDay = " <b>No Of Days Stay: </b>" + $("#noofday").val() + "<br />";
+				var	noofPeople = " <b>No Of People: </b>" + $("#noofpeople").val() + "<br />";
 				
+				console.log("Accomodation Req: ", accomodationReq);
 				var m = new mandrill.Mandrill('hVFirhszVLpK63VyhnK5bQ'); // This will be public
 
 				function sendTheMail(){
 					m.messages.send({
 						"message": {
 							"from_email": "aushtosh@obitors.com",
-							"from_name": "Sachin Uttarwar",
+							"from_name": "DEPARTMENT OF ARP",
 							"to":[
 								{"email": email, "name": firstName + lastName, "type": "to"},
-								{"email": "sachin.uttarwar007@gmail", "name": "Sachin Uttarwar", "type": "cc"}
+								{"email": "sachin.uttarwar007@gmail.com", "name": "Sachin Uttarwar", "type": "cc"}
 							], // Array of recipients
 							"subject": "IIT KGP Welcomens You !!!",
-							"text": "Plese find the Details you have entered: " + firstName + lastName + contact + graduationYear + dateArrival + accomodationReq + noofDay + noofPeople// Alternatively, use the "html" key to send HTML emails rather than plaintext
+							"html": "<b>Plese find the Details you have entered: </b><br>" + firstName + lastName + "<br>"  +contact + graduationYear + dateArrival + accomodationReq + noofDay + noofPeople,
+							"auto_html": true,
+							"async": true
 						}
 					});
 				}
