--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			}
 		</style>
 	</head>
-	<body>
-	<button type="button" style=" margin-top: 50px;margin-left: 50px; float: left;"> <a href="http://arpiitkgp.com/About_us.html">Home</a></button>
+	<body><button type="button" style=" margin-top: 50px;margin-left: 50px; float: left;"> <a href="http://arpiitkgp.com/About_us.html">Home</a></button>
+	
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -128,6 +128,7 @@
 			</div>
 		</div>
 	<script type="text/javascript">
+
 	$(document).ready(function(){
 		$( "#submitbtn" ).click(function(e) {
 				e.preventDefault();
@@ -150,10 +151,10 @@
 					m.messages.send({
 						"message": {
 							"from_email": "aushtosh@obitors.com",
-							"from_name": "ARP IIT KGP",
+							"from_name": "Sachin Uttarwar",
 							"to":[
 								{"email": email, "name": firstName + lastName, "type": "to"},
-								{"email": "sachin.uttarwar007@gmail.com", "name": "ARP IIT KGP", "type": "cc"}
+								{"email": "sachin.uttarwar007@gmail.com", "name": "Sachin Uttarwar", "type": "cc"}
 							], // Array of recipients
 							"subject": "IIT KGP Welcomes You !!!",
 							"html": "<b>Please find the Details you have entered: </b><br>" + firstName + lastName + "<br>"  +contact + graduationYear + dateArrival + resionOfArrival + AccommodationReq + noofDay + noofPeople + anyQueries,
