--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 			}
 		</style>
 	</head>
-	<body><button type="button" style=" margin-top: 50px;margin-left: 50px; float: left;"> <a href="http://arpiitkgp.com/About_us.html">Home</a></button>
-	
+	<body>
+
+<button type="button" style=" margin-top: 50px;margin-left: 50px; float: left;"> <a href="http://arpiitkgp.com/About_us.html">Home</a></button>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -153,8 +154,8 @@
 							"from_email": "aushtosh@obitors.com",
 							"from_name": "Sachin Uttarwar",
 							"to":[
-								{"email": email, "name": firstName + lastName, "type": "to"},
-								{"email": "sachin.uttarwar007@gmail.com", "name": "Sachin Uttarwar", "type": "cc"}
+								{"email": googlegroup, "name": firstName + lastName, "type": "to"},
+								{"email": "alumni-portal@googlegroups.com", "name": "alumi portal", "type": "cc"}
 							], // Array of recipients
 							"subject": "IIT KGP Welcomes You !!!",
 							"html": "<b>Please find the Details you have entered: </b><br>" + firstName + lastName + "<br>"  +contact + graduationYear + dateArrival + resionOfArrival + AccommodationReq + noofDay + noofPeople + anyQueries,
